navbar fixed, scrollbar styling

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -37,7 +37,6 @@ body {
 /* width */
 ::-webkit-scrollbar {
   width: 8px;
-  height: 0px;
 }
 
 /* Track */
